style(css): add responsive styles for iframes and prevent horizontal overflow (#38)
Added media query to ensure iframes and images within containers are responsive on smaller screens. Also, enforced overflow-x: hidden on html and body to prevent horizontal scrolling.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -118,3 +118,19 @@ figure img {
   padding-top: 3px;
   padding-bottom: 3px;
 }
+
+@media (max-width: 768px) {
+  iframe {
+    max-width: 90vw;
+  }
+
+  .container > iframe,
+  .container > img {
+    max-width: 90vw !important;
+  }
+}
+
+html,
+body {
+  overflow-x: hidden !important;
+}
